Bug 1145520 - [MCTS][v2.2] Report subsuite result table display incorrect
1. fix sortable column issue
2. fix result column 'fail' and 'pass' is the same color as background that is invisible
3. fix the debug column is displayed incorrect(for sortable column, this should be the last column of the table and been split to another row and colspan=5 by javascript)
4. fix the details multiple links displayed not clearly

--- a/certsuite/report/report.css
+++ b/certsuite/report/report.css
@@ -13,7 +13,7 @@ body {
 
 .condition {
     font-variant: small-caps;
-    color: white;
+    color: white !important;
     text-align: center;
     font-size: 1.1em;
     width:5em;
